--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,12 @@
 
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub OWNER Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/xwls/utils</url>
+        </repository>
+    </distributionManagement>
+
 </project>
